Add users and authentication via JWT

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ storage_app_api-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+/.env
